[package]
name = "hooked"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "4.0.0"
env_logger = "0.9.0"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.17"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
sha2 = "0.10.2"
tide = "0.16.0"
tide-rustls = "0.3.0"
tokio = { version = "1.20.0", features = ["full"] }
toml = "0.5.9"
